<resources>
    <string name="app_name">UniFlow</string>
    <string name="open_nav">Open navigation bar</string>
    <string name="close_nav">Close navigation bar</string>
    <string name="admin">Admin Panel</string>
    <string name="posting">Create a Post</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="clubs">Clubs</string>
    <string name="scores">Scores</string>
    <string name="logout">Log Out</string>
    <string name="messages">Messages</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>