<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/nav_admin"
            android:title="@string/admin"/>

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/nav_admin"
            android:title="@string/posting"/>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/nav_schedule"
            android:title="@string/schedule"/>

        <item
            android:id="@+id/nav_scores"
            android:icon="@drawable/nav_scores"
            android:title="@string/scores"/>
        <item
            android:id="@+id/nav_clubs"
            android:icon="@drawable/nav_clubs"
            android:title="@string/clubs"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/logout"/>

    </group>
</menu>